--- a/src/app/feature-components/user-dashboard/user-dashboard/level1-metrics/level1-metrics.component.html
+++ b/src/app/feature-components/user-dashboard/user-dashboard/level1-metrics/level1-metrics.component.html
@@ -1,1 +1,1 @@
-<p>level1-metrics works!</p>
+<iframe src="http://localhost:5601/app/kibana#/dashboard/722b74f0-b882-11e8-a6d9-e546fe2bba5f?embed=true&_g=(filters:!(),refreshInterval:(pause:!f,value:900000),time:(from:now-7d,to:now))&_a=(description:'Analyze%20mock%20eCommerce%20orders%20and%20revenue',filters:!(),fullScreenMode:!f,options:(hidePanelTitles:!f,useMargins:!t),query:(language:kuery,query:''),timeRestore:!t,title:'%5BeCommerce%5D%20Revenue%20Dashboard',viewMode:view)" height="100%" width="100%"></iframe>
