--- a/src/app/feature-components/user-dashboard/user-dashboard/cy-feedback-data/cy-feedback-data.component.html
+++ b/src/app/feature-components/user-dashboard/user-dashboard/cy-feedback-data/cy-feedback-data.component.html
@@ -4,16 +4,37 @@
       <div class="row">
         <div class="col-sm-12">
           <p-fieldset legend="Filter" [toggleable]="true" [transitionOptions]="'300ms'" >
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+           <div class="row">
+             <div class="col-sm-12">
+               
+             </div>
+           </div>
         </p-fieldset>
         </div>
       </div>
       <div class="row mt-4">
         <div class="col-sm-12">
-          <table datatable [dtOptions]="dtOptions" class="row-border hover">
+          <table datatable [dtOptions]="dtOptions" class="table stripe" style="width: 100%;">
+            <thead>
+            </thead>
+            <tbody *ngIf="masterReview?.length != 0">
+              <tr *ngFor="let person of masterReview">
+                <td>{{ person.reviewId }}</td>
+                <td>{{ person.reviewDateCreated }}</td>
+                <td>{{ person.entityId }}</td>
+                <td class="font-weight-bold text-dark">{{ person.review }}</td>
+                <td>  <p-rating [(ngModel)]="person.reviewRating"  [stars]=person.ratingMaxValue [readonly]=true [cancel]="false"></p-rating></td>
+                <td><a href={{person.reviewUrl}}><button pButton pRipple type="button" icon="pi pi-bookmark" class="p-button-rounded p-button-success p-button-text"></button></a></td>
+                <td>
+                  
+                </td>
+              </tr>
+            </tbody>
+            <tbody *ngIf="masterReview?.length == 0">
+              <tr>
+                <td colspan="6" class="no-data-available">No data!</td>
+              </tr>
+            </tbody>
           </table>    
         </div>
       </div>
@@ -23,6 +44,10 @@
         <div class="card-body">
           <h5 class="card-title">Notifications</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p-rating ></p-rating>
+          
+          <h5>Basic</h5> 
+          <p-rating [(ngModel)]="val1" ></p-rating>
         </div>
       </div>
     </div>
