--- a/src/app/feature-components/user-dashboard/user-dashboard/user-dashboard.component.html
+++ b/src/app/feature-components/user-dashboard/user-dashboard/user-dashboard.component.html
@@ -2,10 +2,10 @@
 <div class="container-fluid">
     <div class="row" >
         
-        <div class="col-sm-2 p-2 " style="height: 100%;">
+        <div class="col-sm-2 p-2 ">
             <p-panelMenu [model]="items" ></p-panelMenu>
         </div>
-        <div class="col-sm-10">
+        <div class="col-sm-10" >
             <router-outlet></router-outlet>
         </div>
     </div>
